--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,30 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-constrained_2.11-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-core_2.11-1.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-constrained_2.11-1.9.0.jar" sourcepath="graphLibs/target/pack/lib.srcs/graph-constrained_2.11-1.9.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-constrained_2.11-1.9.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-core_2.11-1.9.1.jar" sourcepath="graphLibs/target/pack/lib.srcs/graph-core_2.11-1.9.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-core_2.11-1.9.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-dot_2.11-1.10.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-json_2.11-1.9.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graphlibs_2.11-0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-json_2.11-1.9.2.jar" sourcepath="graphLibs/target/pack/lib.javadoc/graph-json_2.11-1.9.2-javadoc.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-json_2.11-1.9.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/lift-json_2.11-2.6-M4.jar"/>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/paranamer-2.4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scala-parser-combinators_2.11-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scala-xml_2.11-1.0.2.jar" sourcepath="graphLibs/target/pack/lib.srcs/scala-xml_2.11-1.0.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scala-xml_2.11-1.0.2.jar" sourcepath="graphLibs/target/pack/lib.srcs/scala-xml_2.11-1.0.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/scala-xml_2.11-1.0.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scalap-2.11.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="resolverLibs/target/pack/lib/xml-resolver-1.2.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
