--- a/.classpath
+++ b/.classpath
@@ -13,29 +13,39 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-core_2.11-1.9.1-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-dot_2.11-1.10.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-dot_2.11-1.10.0.jar" sourcepath="graphLibs/target/pack/lib.srcs/graph-dot_2.11-1.10.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-dot_2.11-1.10.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/graph-json_2.11-1.9.2.jar" sourcepath="graphLibs/target/pack/lib.javadoc/graph-json_2.11-1.9.2-javadoc.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/graph-json_2.11-1.9.2-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/lift-json_2.11-2.6-M4.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/paranamer-2.4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scala-parser-combinators_2.11-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scala-xml_2.11-1.0.2.jar" sourcepath="graphLibs/target/pack/lib.srcs/scala-xml_2.11-1.0.2-sources.jar">
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/lift-json_2.11-2.6-M4.jar" sourcepath="graphLibs/target/pack/lib.srcs/lift-json_2.11-2.6-M4-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/scala-xml_2.11-1.0.2-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/lift-json_2.11-2.6-M4-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scalap-2.11.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="resolverLibs/target/pack/lib/xml-resolver-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="scalazLibs/target/pack/lib/scalaz-core_2.11-7.1.0.jar" sourcepath="scalazLibs/target/pack/lib.srcs/scalaz-core_2.11-7.1.0-sources.jar">
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/paranamer-2.4.1.jar" sourcepath="graphLibs/target/pack/lib.srcs/paranamer-2.4.1-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/scalazLibs/target/pack/lib.javadoc/scalaz-core_2.11-7.1.0-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/paranamer-2.4.1-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="graphLibs/target/pack/lib/scalap-2.11.1.jar" sourcepath="graphLibs/target/pack/lib.srcs/scalap-2.11.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/graphLibs/target/pack/lib.javadoc/scalap-2.11.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="resolverLibs/target/pack/lib/xml-resolver-1.2.jar" sourcepath="resolverLibs/target/pack/lib.srcs/xml-resolver-1.2-sources.jar"/>
 	<classpathentry exported="true" kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="scalazLibs/target/pack/lib/scalaz-core_2.11-7.1.1.jar" sourcepath="scalazLibs/target/pack/lib.srcs/scalaz-core_2.11-7.1.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.omg.oti/scalazLibs/target/pack/lib.javadoc/scalaz-core_2.11-7.1.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
