TIWG-31 OTI Eclipse plugin metadata
Supporting Java applications to call the Scala OTI API is too difficult with Scala 2.11.
This can be revisited with the planned support for Scala 2.12 / Java8 intereopearability.
http://www.scala-lang.org/news/2.12-roadmap

git-svn-id: https://www.omgwiki.org/repos/TIWG/Eclipse%20Scala%20Projects/org.omg.oti@444684 b05f3425-8805-43f2-8a1d-5852a8693556

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,8 @@
 source.. = src/, src-gen/
 bin.includes = META-INF/,\
-               .
+               .,\
+               resources/,\
+               ,\
+               lib_managed/
+source.. = src/,\
+           src-gen/
