TIWG-31: experience with the Papyrus OTI Loading adaptation lead to adding two type members to UML: - LoadURL - DocumentSetAggregate
git-svn-id: https://www.omgwiki.org/repos/TIWG/Eclipse%20Scala%20Projects/org.omg.oti@444836 b05f3425-8805-43f2-8a1d-5852a8693556

--- a/build.properties
+++ b/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                ,\
                lib_managed/
 source.. = src/,\
-           src-gen/
+           src-gen/,\
+           catalogs/
+output.. = bin/
