--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,5 @@ bin.includes = META-INF/,\
                ,\
                lib_managed/
 source.. = src/,\
-           src-gen/,\
-           catalogs/
+           src-gen/
 output.. = bin/
