--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,9 @@
   <classpathentry kind="src" path="src-gen"/>
   <classpathentry kind="src" path="catalogs"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scalaz/scalaz-core_2.11/scalaz-core_2.11-7.1.1.jar"/>
+  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scalaz/scalaz-core_2.11/scalaz-core_2.11-7.2.0-M3.jar"/>
   <classpathentry exported="true" kind="lib" path="./lib_managed/jars/xml-resolver/xml-resolver/xml-resolver-1.2.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-core_2.11/graph-core_2.11-1.9.2.jar"/>
+  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-core_2.11/graph-core_2.11-1.9.4.jar"/>
   <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-constrained_2.11/graph-constrained_2.11-1.9.0.jar"/>
   <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-json_2.11/graph-json_2.11-1.9.2.jar"/>
   <classpathentry exported="true" kind="lib" path="./lib_managed/jars/net.liftweb/lift-json_2.11/lift-json_2.11-2.6-M4.jar"/>
