--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src"/>
-  <classpathentry kind="src" path="src-gen"/>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.sksamuel.scapegoat/scalac-scapegoat-plugin_2.11/scalac-scapegoat-plugin_2.11-1.0.0.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scaldi/scaldi_2.11/scaldi_2.11-0.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scalaz/scalaz-core_2.11/scalaz-core_2.11-7.2.0-M5.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/xml-resolver/xml-resolver/xml-resolver-1.2.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-core_2.11/graph-core_2.11-1.9.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-constrained_2.11/graph-constrained_2.11-1.9.0.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-json_2.11/graph-json_2.11-1.9.2.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/net.liftweb/lift-json_2.11/lift-json_2.11-2.6-M4.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scala-lang/scalap/scalap-2.11.1.jar"/>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/bundles/org.scala-lang.modules/scala-xml_2.11/scala-xml_2.11-1.0.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/bundles/org.scala-lang.modules/scala-parser-combinators_2.11/scala-parser-combinators_2.11-1.0.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.thoughtworks.paranamer/paranamer/paranamer-2.4.1.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/com.assembla.scala-incubator/graph-dot_2.11/graph-dot_2.11-1.10.0.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scoverage/scalac-scoverage-runtime_2.11/scalac-scoverage-runtime_2.11-1.1.0.jar"/>
-  <classpathentry exported="true" kind="lib" path="./lib_managed/jars/org.scoverage/scalac-scoverage-plugin_2.11/scalac-scoverage-plugin_2.11-1.1.0.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-  <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-gen"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.sksamuel.scapegoat/scalac-scapegoat-plugin_2.11/scalac-scapegoat-plugin_2.11-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/org.scaldi/scaldi_2.11/scaldi_2.11-0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/org.scalaz/scalaz-core_2.11/scalaz-core_2.11-7.2.0-M5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/xml-resolver/xml-resolver/xml-resolver-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.assembla.scala-incubator/graph-core_2.11/graph-core_2.11-1.9.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.assembla.scala-incubator/graph-constrained_2.11/graph-constrained_2.11-1.9.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.assembla.scala-incubator/graph-json_2.11/graph-json_2.11-1.9.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/net.liftweb/lift-json_2.11/lift-json_2.11-2.6-M4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/org.scala-lang/scalap/scalap-2.11.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/bundles/org.scala-lang.modules/scala-xml_2.11/scala-xml_2.11-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/bundles/org.scala-lang.modules/scala-parser-combinators_2.11/scala-parser-combinators_2.11-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.thoughtworks.paranamer/paranamer/paranamer-2.4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/com.assembla.scala-incubator/graph-dot_2.11/graph-dot_2.11-1.10.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/org.scoverage/scalac-scoverage-runtime_2.11/scalac-scoverage-runtime_2.11-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_managed/jars/org.scoverage/scalac-scoverage-plugin_2.11/scalac-scoverage-plugin_2.11-1.1.0.jar"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
