--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,7 @@ source.. = src/, src-gen/
 bin.includes = META-INF/,\
                .,\
                resources/,\
-               lib_managed/,\
-               lib_managed/jars/com.assembla.scala-incubator/graph-core_2.11/graph-core_2.11-1.9.4.jar
+               lib_managed/
 source.. = src/,\
            src-gen/,\
            catalogs/
