--- a/.project
+++ b/.project
@@ -9,5 +9,11 @@
     <nature>org.scala-ide.sdt.core.scalanature</nature>
     <nature>org.eclipse.jdt.core.javanature</nature>
   </natures>
-  <linkedResources> </linkedResources>
+	<linkedResources>
+		<link>
+			<name>models</name>
+			<type>2</type>
+			<locationURI>PROJECT_LOC/resources</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
