--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,8 @@ source.. = src/, src-gen/
 bin.includes = META-INF/,\
                .,\
                resources/,\
-               lib_managed/
+               lib_managed/,\
+               lib_managed/bundles/org.scalaz/scalaz-core_2.11/scalaz-core_2.11-7.2.0-M5.jar
 source.. = src/,\
            src-gen/,\
            catalogs/
