--- a/svn/.project
+++ b/svn/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>oti-core</name>
+	<name>org.omg.oti.uml.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
