--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ cache:
   - "$HOME/.ivy2/cache"
   - "$HOME/.sbt/boot/"
 
+addons:
+  apt:
+    packages:
+      - graphviz
+
 before_cache:
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
